<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Advisor</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="toggle">Menu</string>
    <string name="siane">Advisor</string>
    <string name="payPalbtn">Pay</string>
    <string name="pic_des">logo</string>
    <string name="call_btn_txt">Call Advisor</string>
    <string name="hang_up_btn">Hangup</string>
    <string name="call_email_txt">Google Voice Email</string>
    <string name="call_email_pwd">Password</string>
    <string name="call_ph_lbl">Phone # registed (Optional)</string>
    <string name="login_email">Email id or username</string>
    <string name="login_hint">Email</string>
    <string name="login_password">Password</string>
    <string name="login_button">Login</string>
    <string name="register_name">Name</string>
    <string name="register_name_hint">Enter your Name</string>
    <string name="register_email">Email Address</string>
    <string name="register_email_hint">Enter your Email</string>
    <string name="register_password">Enter Password</string>
    <string name="register_password_again">Re-enter password</string>
    <string name="register_button_text">Register Me</string>
    <string name="register_button_reset_password">Reset Password</string>
    <string name="forgotpassword_email_text">Email Address</string>
    <string name="forgotpassword_password_text">New Password</string>
    <string name="forgotpassword_password_again">Re-enter password</string>
    <string name="forgotpassword_button_text">Change</string>
    <string name="disclaimer_title">Disclaimer</string>
    <string name="splash_screen">Loading&#8230;</string>
    <string name="splash_screen_text_des">SplashScreen</string>
    <string name="splash_screen_img_des">splashimage</string>
    <string name="help_title">Help</string>

    <string-array name="nav_drawer_items">
        <item >Login</item>
        <item >Add Minutes</item>
        <item >Call Advisor</item>
        <item >Register</item>
        <item>Help</item>
        <item >Disclaimer</item>
        <item >Log Out</item>
    </string-array>
    <string name="option1">Call Advisor</string>

</resources>
