<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/splash_screen_img_des"
        android:src="@drawable/splashscreen" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:contentDescription="@string/splash_screen_text_des"
        android:text="@string/splash_screen" 
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_gravity="center"
        android:id="@+id/splash_text"
        android:gravity="center"/>

</LinearLayout>